--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Выполнил студент группы М8О-406Б-21 Леленков Никита Дмитриевич
+
+Исользован датасет https://www.kaggle.com/datasets/ankanghosh651/object-detection-wildlife-dataset-yolo-format
+Для распознавания животных. 
