--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 Выполнил студент группы М8О-406Б-21 Леленков Никита Дмитриевич
 
-Исользован датасет https://www.kaggle.com/datasets/ankanghosh651/object-detection-wildlife-dataset-yolo-format
-Для распознавания животных. 
+Исользованы датасеты
+https://www.kaggle.com/datasets/ar5entum/leaf-flower-fruit-annotation для распознавания растений(лаб 7)
+и https://www.kaggle.com/datasets/ankanghosh651/object-detection-wildlife-dataset-yolo-format
+Для распознавания животных (лаб 8).
+
+
